@@ -27,7 +27,7 @@ public class ConvertToTextBlockTest {
     @Test
     public void testFixWorking() throws Exception {
         try {
-            SourceVersion.valueOf("RELEASE_13");
+            SourceVersion.valueOf("RELEASE_15");
         } catch (IllegalArgumentException ex) {
             //OK, skip test
             return ;
@@ -42,7 +42,6 @@ public class ConvertToTextBlockTest {
                        "    }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertToTextBlock.class)
                 .findWarning("3:30-3:37:verifier:" + Bundle.ERR_ConvertToTextBlock())
                 .applyFix()
@@ -62,7 +61,7 @@ public class ConvertToTextBlockTest {
     @Test
     public void testNewLineAtEnd() throws Exception {
         try {
-            SourceVersion.valueOf("RELEASE_13");
+            SourceVersion.valueOf("RELEASE_15");
         } catch (IllegalArgumentException ex) {
             //OK, skip test
             return ;
@@ -77,7 +76,6 @@ public class ConvertToTextBlockTest {
                        "    }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertToTextBlock.class)
                 .findWarning("3:30-3:37:verifier:" + Bundle.ERR_ConvertToTextBlock())
                 .applyFix()
@@ -98,7 +96,7 @@ public class ConvertToTextBlockTest {
     @Test
     public void testNewLinesAtEnd() throws Exception {
         try {
-            SourceVersion.valueOf("RELEASE_13");
+            SourceVersion.valueOf("RELEASE_15");
         } catch (IllegalArgumentException ex) {
             //OK, skip test
             return ;
@@ -113,7 +111,6 @@ public class ConvertToTextBlockTest {
                        "    }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertToTextBlock.class)
                 .findWarning("3:30-3:37:verifier:" + Bundle.ERR_ConvertToTextBlock())
                 .applyFix()
@@ -134,7 +131,7 @@ public class ConvertToTextBlockTest {
     @Test
     public void testOnlyLiterals() throws Exception {
         try {
-            SourceVersion.valueOf("RELEASE_13");
+            SourceVersion.valueOf("RELEASE_15");
         } catch (IllegalArgumentException ex) {
             //OK, skip test
             return ;
@@ -148,7 +145,6 @@ public class ConvertToTextBlockTest {
                        "    private int c() { return 0; }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertToTextBlock.class)
                 .assertWarnings();
     }
